# USB-MIDI-Driver

./: .gitignore  .gitmodules  .swiftlint.yml  CMakeLists.txt  Package.resolved  Package.swift  README.md  build.gradle  build_android.sh  settings.gradle
MIDIDriver/: AndroidManifest.xml  build.gradle
MIDIDriverSample/: AndroidManifest.xml  build.gradle
NoteDetection/: AudioFollower.swift  AudioHelper.swift  AudioNoteDetection.swift  ChromaVector.swift  ClavinovaMessages.swift  CrossPlatformHelper.swift  Filter.swift  FilterBank.swift  Filterbank+ChromaVector.swift  FlowMath.swift  Follower.swift  InputType.swift  LearnableHand.swift  LightControl.swift  LocalExtreme.swift  MIBYHandlers.swift  MIDIEndpointRef+NetworkSessionIOS.swift  MIDIEndpointRef+NetworkSessionMacOS.swift  MIDIFollower.swift  MIDINoteDetection.swift  MIDINumber+MusicalNote.swift  MIDINumber.swift  MIDIOutConnection.swift  MusicalNote.swift  NoteDetection.h  NoteDetection.swift  NoteDetectionData.swift  NoteEvent.swift  NoteEventArray.swift  OnsetDetection.swift  OnsetFeatures.swift  PitchDetection.swift  PitchDetectionData.swift  PlatformAndroid.swift  PlatformApple.swift  ProcessedAudio.swift  RMS.swift
NoteDetection.xcodeproj/: project.pbxproj
NoteDetection.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NoteDetection.xcworkspace/: contents.xcworkspacedata
NoteDetection.xcworkspace/xcshareddata/: NoteDetection.xcscmblueprint
NoteDetection/AudioEngine/: AudioEngineProtocol.swift  AudioInput.swift
NoteDetection/MIDIManager/: MIDIDevice.swift  MIDIInput.swift  MIDIManagerProtocol.swift  MIDIMessage.swift  MIDINumber.swift
NoteDetectionAndroid/: settings.gradle
NoteDetectionAndroid/notedetection/: build.gradle
NoteDetectionMac/: AudioEngineMac.swift  Info.plist  MIDIEngineMac.swift  NoteDetectionMac.h  SuperpoweredOSXAudioIO.h  SuperpoweredOSXAudioIO.mm
NoteDetectionMacTests/: NoteDetectionMacTests.swift
NoteDetectionTests/: AndroidMathTests.swift  AppleFilterBank.swift  AudioEngineTest.swift  AudioFollowerTest.swift  AudioHelperTests.swift  AudioNoteDetectorTest.swift  ChromaVectorTests.swift  FilterBankTests.swift  FollowerTest.swift  LightControlTests.swift  MIDIFollowerTest.swift  MIDIMessageTests.swift  MIDINoteDetectorTest.swift  MIDIPacketListTest.swift  MemoryLeakTests.swift  NativePitchDetectionTests.swift  NoteDetectionTests-Bridging-Header.h  NoteDetectionTests.swift  NoteDetectorTestDelegate.swift  NoteEventsFixture.swift  SampleData.swift
Sources/: AudioEngineAndroid.swift  AudioHelper.swift  AudioNoteDetection.swift  Filter.swift  FilterBank.swift  FlowMath.swift  FlowMathApple.swift  InputType.swift  MIDINoteDetection.swift  PitchDetection.swift
Sources/CAndroidAudioEngine/: Android.mk  build.sh  build_engine.sh
Sources/NoteDetection/: AVAudioEngine+Category.swift  AndroidActivityContext.swift  AudioEngine.swift  AudioEngineAndroid.swift  AudioEngineIOS.swift  AudioHelper.swift  AudioInput.swift  AudioNoteDetection.swift  AudioUnitExtensions.swift  (+46 more)
(+71 files in other folders)
